Convert Java files to Kolin Enable View Binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         }
     }
     namespace 'com.example.android.foodbudg'
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
